Set DISABLE_DSC_CONFIG to false as we want to reproduce the issue with upstream sources

--- a/bundle/manifests/opendatahub-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/opendatahub-operator.clusterserviceversion.yaml
@@ -1073,7 +1073,7 @@ spec:
                 - /manager
                 env:
                 - name: DISABLE_DSC_CONFIG
-                  value: "true"
+                  value: "false"
                 - name: OPERATOR_NAMESPACE
                   valueFrom:
                     fieldRef:
