--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -39,7 +39,7 @@ spec:
         - /manager
         env:
           - name: DISABLE_DSC_CONFIG
-            value: 'true'
+            value: 'false'
           - name: OPERATOR_NAMESPACE
             valueFrom:
               fieldRef:
